# AVoice

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cpu  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
omnivoice/: __init__.py
omnivoice/cli/: infer.py
omnivoice/models/: omnivoice.py
omnivoice/server/: __init__.py  app.py  prefetch.py
omnivoice/utils/: armenian_text.py  voice_design.py
