[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avoice"
version = "0.1.0"
description = "Armenian text-to-speech runtime for the AVoice OmniVoice model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0" }
dependencies = [
    "numpy>=1.26",
    "torch>=2.4",
    "torchaudio>=2.4",
    "transformers>=5.5.0",
    "huggingface_hub>=0.24",
    "soundfile>=0.12",
    "sentencepiece>=0.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydub",
    "librosa",
]

[project.scripts]
avoice = "omnivoice.cli.infer:main"
omnivoice-infer = "omnivoice.cli.infer:main"
omnivoice-api = "omnivoice.server.app:main"
omnivoice-prefetch = "omnivoice.server.prefetch:main"

[tool.setuptools.packages.find]
include = ["omnivoice*"]
